--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -60,6 +60,16 @@ jobs:
         run: npm install --legacy-peer-deps
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        env:
+          NODE_OPTIONS: --max-old-space-size=4096
+          NODE_ENV: production
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          EMAIL_ADDRESS: raed@elmajdoub.live
+          NEXT_PUBLIC_APP_URL: https://books.elmajdoub.live
+          NEXT_PUBLIC_AWS_BUCKET_NAME: s3hsoub-finale-raed-elmajdoub
+          NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
+          NEXT_PUBLIC_ISPREVIEW: true
       - name: Static HTML export with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Upload artifact
