--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 NODE_ENV=
 
-JWT_SECRET=
-MONGODB_URI=
+JWT_SECRET=test
+MONGODB_URI=mongodb+srv://raedelmajdoub:7jTkFj1MEJCtBhkP@cluster0.w5cbs6x.mongodb.net/kotbi?retryWrites=true&w=majority
 
 EMAIL_ADDRESS=
 EMAIL_APP_PASSWORD=
