--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#vscode
+.vscode
+
 # dependencies
 /node_modules
 /.pnp
@@ -25,8 +28,6 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.sample
-.env.*
 .env*.local
 .env
 
