--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -2,7 +2,7 @@ name: Deploy Next.js site to Pages
 
 on:
   push:
-    branches: ["pages"]
+    branches: ["main", "pages", "prod"]
 
   workflow_dispatch:
 
@@ -56,49 +56,51 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
-      - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
-        env:
-          NODE_OPTIONS: --max-old-space-size=4096
-          NODE_ENV: production
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          EMAIL_APP_PASSWORD: ${{ secrets.EMAIL_APP_PASSWORD }}
-          NEXT_PUBLIC_RECAPTCHA_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_KEY }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-          NEXT_PUBLIC_AWS_ACCESS_KEY_ID: ${{ secrets.NEXT_PUBLIC_AWS_ACCESS_KEY_ID }}
-          NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY }}
-          NEXT_PUBLIC_GOOGLE_ANALYTICS: G-818X7G152J
-          NEXT_PUBLIC_GOOGLE_TAG_MANAGER: GTM-TK3H5GL8
-          EMAIL_ADDRESS: raed@elmajdoub.live
-          NEXT_PUBLIC_APP_URL: https://books.elmajdoub.live
-          NEXT_PUBLIC_AWS_BUCKET_NAME: s3hsoub-finale-raed-elmajdoub
-          NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
-          NEXT_PUBLIC_ISPREVIEW: true
-      - name: Static HTML export with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next export
-        env:
-          NODE_OPTIONS: --max-old-space-size=4096
-          NODE_ENV: production
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          EMAIL_APP_PASSWORD: ${{ secrets.EMAIL_APP_PASSWORD }}
-          NEXT_PUBLIC_RECAPTCHA_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_KEY }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-          NEXT_PUBLIC_AWS_ACCESS_KEY_ID: ${{ secrets.NEXT_PUBLIC_AWS_ACCESS_KEY_ID }}
-          NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY }}
-          NEXT_PUBLIC_GOOGLE_ANALYTICS: G-818X7G152J
-          NEXT_PUBLIC_GOOGLE_TAG_MANAGER: GTM-TK3H5GL8
-          EMAIL_ADDRESS: raed@elmajdoub.live
-          NEXT_PUBLIC_APP_URL: https://books.elmajdoub.live
-          NEXT_PUBLIC_AWS_BUCKET_NAME: s3hsoub-finale-raed-elmajdoub
-          NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
-          NEXT_PUBLIC_ISPREVIEW: true
-      - name: Upload artifact
+      # - name: Install dependencies
+      #   run: npm install --legacy-peer-deps
+      # - name: Build with Next.js
+      #   run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      #   env:
+      #     NODE_OPTIONS: --max-old-space-size=4096
+      #     NODE_ENV: production
+      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      #     MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      #     EMAIL_APP_PASSWORD: ${{ secrets.EMAIL_APP_PASSWORD }}
+      #     NEXT_PUBLIC_RECAPTCHA_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_KEY }}
+      #     GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      #     GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+      #     NEXT_PUBLIC_AWS_ACCESS_KEY_ID: ${{ secrets.NEXT_PUBLIC_AWS_ACCESS_KEY_ID }}
+      #     NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY }}
+      #     NEXT_PUBLIC_GOOGLE_ANALYTICS: G-818X7G152J
+      #     NEXT_PUBLIC_GOOGLE_TAG_MANAGER: GTM-TK3H5GL8
+      #     EMAIL_ADDRESS: raed@elmajdoub.live
+      #     NEXT_PUBLIC_APP_URL: https://books.elmajdoub.live
+      #     NEXT_PUBLIC_AWS_BUCKET_NAME: s3hsoub-finale-raed-elmajdoub
+      #     NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
+      #     NEXT_PUBLIC_ISPREVIEW: true
+      # - name: Static HTML export with Next.js
+      #   run: ${{ steps.detect-package-manager.outputs.runner }} next export
+      #   env:
+      #     NODE_OPTIONS: --max-old-space-size=4096
+      #     NODE_ENV: production
+      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      #     MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      #     EMAIL_APP_PASSWORD: ${{ secrets.EMAIL_APP_PASSWORD }}
+      #     NEXT_PUBLIC_RECAPTCHA_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_KEY }}
+      #     GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      #     GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+      #     NEXT_PUBLIC_AWS_ACCESS_KEY_ID: ${{ secrets.NEXT_PUBLIC_AWS_ACCESS_KEY_ID }}
+      #     NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY }}
+      #     NEXT_PUBLIC_GOOGLE_ANALYTICS: G-818X7G152J
+      #     NEXT_PUBLIC_GOOGLE_TAG_MANAGER: GTM-TK3H5GL8
+      #     EMAIL_ADDRESS: raed@elmajdoub.live
+      #     NEXT_PUBLIC_APP_URL: https://books.elmajdoub.live
+      #     NEXT_PUBLIC_AWS_BUCKET_NAME: s3hsoub-finale-raed-elmajdoub
+      #     NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
+      #     NEXT_PUBLIC_ISPREVIEW: true
+      - name: Copy readme
+        run: cp README.md out/README.md
+      - name: Upload Readme
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./out
@@ -114,3 +116,30 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
+  # Cleanup job
+  cleanup:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Cleanup
+        uses: actions/github-script@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { data: deployments } = await github.rest.repos.listDeployments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              environment: "github-pages",
+              per_page: 100,
+            });
+            const deploymentsToDelete = deployments.filter(
+              (deployment) => deployment.id !== context.runId
+            );
+            for (const deployment of deploymentsToDelete) {
+              await github.rest.repos.deleteDeployment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                deployment_id: deployment.id,
+              });
+            }
