--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -99,11 +99,19 @@ jobs:
       #     NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
       #     NEXT_PUBLIC_ISPREVIEW: true
       - name: Copy readme
-        run: mkdir out && cp README.md out/README.md
+        run: mkdir out && cp README.md out/index.html
       - name: Upload Readme
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./out
+
+  #Check job
+  check:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        run: if [! -d "$out" ]; then mkdir out; fi
 
   # Deployment job
   deploy:
@@ -123,23 +131,4 @@ jobs:
     needs: deploy
     steps:
       - name: Cleanup
-        uses: actions/github-script@v4
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { data: deployments } = await github.rest.repos.listDeployments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              environment: "github-pages",
-              per_page: 100,
-            });
-            const deploymentsToDelete = deployments.filter(
-              (deployment) => deployment.id !== context.runId
-            );
-            for (const deployment of deploymentsToDelete) {
-              await github.rest.repos.deleteDeployment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                deployment_id: deployment.id,
-              });
-            }
+        run: rm -rf out
