--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -16,6 +16,18 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  #Test job
+  test:
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: https://github.com/ElMajdoubraed/Book_store/blob/main/README.md
+    steps:
+      - name: Check if readme exist
+        run: if ! test -f "README.md"; then echo "README.md not found"; exit 1; fi
+      - name: Check if readme is not empty
+        run: if [ ! -s "README.md" ]; then echo "README.md is empty"; exit 1; fi
+
   # Build job
   build:
     runs-on: ubuntu-latest
@@ -56,48 +68,6 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      # - name: Install dependencies
-      #   run: npm install --legacy-peer-deps
-      # - name: Build with Next.js
-      #   run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      #   env:
-      #     NODE_OPTIONS: --max-old-space-size=4096
-      #     NODE_ENV: production
-      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      #     MONGODB_URI: ${{ secrets.MONGODB_URI }}
-      #     EMAIL_APP_PASSWORD: ${{ secrets.EMAIL_APP_PASSWORD }}
-      #     NEXT_PUBLIC_RECAPTCHA_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_KEY }}
-      #     GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-      #     GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-      #     NEXT_PUBLIC_AWS_ACCESS_KEY_ID: ${{ secrets.NEXT_PUBLIC_AWS_ACCESS_KEY_ID }}
-      #     NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY }}
-      #     NEXT_PUBLIC_GOOGLE_ANALYTICS: G-818X7G152J
-      #     NEXT_PUBLIC_GOOGLE_TAG_MANAGER: GTM-TK3H5GL8
-      #     EMAIL_ADDRESS: raed@elmajdoub.live
-      #     NEXT_PUBLIC_APP_URL: https://books.elmajdoub.live
-      #     NEXT_PUBLIC_AWS_BUCKET_NAME: s3hsoub-finale-raed-elmajdoub
-      #     NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
-      #     NEXT_PUBLIC_ISPREVIEW: true
-      # - name: Static HTML export with Next.js
-      #   run: ${{ steps.detect-package-manager.outputs.runner }} next export
-      #   env:
-      #     NODE_OPTIONS: --max-old-space-size=4096
-      #     NODE_ENV: production
-      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      #     MONGODB_URI: ${{ secrets.MONGODB_URI }}
-      #     EMAIL_APP_PASSWORD: ${{ secrets.EMAIL_APP_PASSWORD }}
-      #     NEXT_PUBLIC_RECAPTCHA_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_KEY }}
-      #     GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-      #     GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-      #     NEXT_PUBLIC_AWS_ACCESS_KEY_ID: ${{ secrets.NEXT_PUBLIC_AWS_ACCESS_KEY_ID }}
-      #     NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY }}
-      #     NEXT_PUBLIC_GOOGLE_ANALYTICS: G-818X7G152J
-      #     NEXT_PUBLIC_GOOGLE_TAG_MANAGER: GTM-TK3H5GL8
-      #     EMAIL_ADDRESS: raed@elmajdoub.live
-      #     NEXT_PUBLIC_APP_URL: https://books.elmajdoub.live
-      #     NEXT_PUBLIC_AWS_BUCKET_NAME: s3hsoub-finale-raed-elmajdoub
-      #     NEXT_PUBLIC_S3_UPLOAD_URL: https://s3hsoub-finale-raed-elmajdoub.s3.amazonaws.com
-      #     NEXT_PUBLIC_ISPREVIEW: true
       - name: Copy readme
         run: mkdir out && cp README.md out/index.html
       - name: Upload Readme
