--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth2": "^0.1.5",
     "@types/react-google-recaptcha": "^2.1.5",
-    "@types/uuid": "^9.0.4"
+    "@types/uuid": "^9.0.4",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
